hotfix for sdk dependences

--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,9 @@ python-dateutil>=2.8
 python-dotenv>=1.0
 
 # === API CLIENT ===
-chesserp-api @ git+ssh://git@github.com/nahuel893/chesserp-py-sdk.git@v0.1.0
+# chesserp se instala por separado desde el repo local de cada entorno:
+#   Dev:    pip install -e /home/nahuel/projects/work/chesserp-py-sdk
+#   Server: pip install -e /srv/app/chesserp-api (via post-receive hook)
 
 # === TESTING ===
 pytest>=7.0
